--- a/MvcFirstApp/MvcFirstApp.csproj
+++ b/MvcFirstApp/MvcFirstApp.csproj
@@ -108,11 +108,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\Employe_list.cs" />
+    <Compile Include="Controllers\Demo1Controller.cs" />
     <Compile Include="Controllers\FirstController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Employe_list.cs" />
     <Compile Include="Models\FirstMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -137,7 +138,13 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\First\First.cshtml" />
+    <Content Include="Views\First\Get_Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\First\aa.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Demo1\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
